--- a/testdemo/test.html
+++ b/testdemo/test.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <script src="lib.js"></script>
     <script src="test.js"></script>
+    <script src="stub.js"></script>
+    <script>
+        var sp = {}
+        window.onload = function () {
+            sp.abc = document.getElementById("abc");
+            sp.p = document.getElementsByTagName("p")[0]
+            sp.newp = sp.p.cloneNode(true)
+            sp.getp = function () {
+                return sp.p.cloneNode(true)
+            }
+            sp.t=document.getElementsByTagName("table")[0]
+            makeSortable(sp.t)
+        }
+    </script>
+    <link href="test.css" type="text/css" rel="stylesheet"/>
     <title>Test</title>
 </head>
 <body>
+<div id="abc">id</div>
+<p>what is your name?</p>
+<table>
 
+    <tr>
+        <td>3</td>
+        <td>2</td>
+
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>8</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>6</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>7</td>
+
+    </tr>
+</table>
 </body>
 </html>
