--- a/testdemo/test.html
+++ b/testdemo/test.html
@@ -11,13 +11,15 @@
         var s = {};
 
         window.onload = function () {
+            s.div = document.getElementById("c_div");
+            s.p = document.getElementById("c_p");
         }
     </script>
     <title>Test</title>
 </head>
 <body>
-<div id="abc">id</div>
-<p>what is your name?</p>
+<div id="c_div">id</div>
+<p id="c_p">what is your name?</p>
 
 
 <form method="get" name="test">
