--- a/example/17.04.draggable_clock.html
+++ b/example/17.04.draggable_clock.html
@@ -1,9 +1,9 @@
-<script src="whenReady.js"></script>
+<script src="17.01.whenReady.js"></script>
 <script>
     whenReady(function () {
         var clock = document.getElementById("clock");  // The clock element
         var icon = new Image();                        // An image to drag
-        icon.src = "clock-icon.png";                   // Image URL
+        icon.src = "clock-icon.ico";                   // Image URL
 
         // Display the time once every minute
         function displayTime() {
